# llm_file_embedding_manage

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  documents.py  embeddings.py  llm.py  org.py  search.py
backend/app/core/: config.py  security.py
backend/app/models/: citation.py  config.py  conversation.py  department.py  document.py  document_chunk.py  message.py  organization.py  user.py  user_department.py  user_org.py
backend/app/schemas/: chat.py  config.py  document.py  org.py  search.py
docs/: development.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx
