[tool.poetry]
name = "file-embedding-platform"
version = "0.1.0"
description = "Backend for file embedding platform"
authors = ["Dev <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlmodel = "^0.0.22"
jose = {version = "^3.3.0", extras = ["cryptography"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
